ALot of refractoring to prep for future dragon type potential.