@@ -1,10 +1,10 @@
 package com.github.alexthe666.iceandfire.compat.jei;
 
-import com.github.alexthe666.iceandfire.block.IafBlockRegistry;
-import com.github.alexthe666.iceandfire.compat.jei.firedragonforge.FireDragonForgeCategory;
-import com.github.alexthe666.iceandfire.compat.jei.icedragonforge.IceDragonForgeCategory;
-import com.github.alexthe666.iceandfire.compat.jei.lightningdragonforge.LightningDragonForgeCategory;
+import com.github.alexthe666.iceandfire.block.DragonForge;
+import com.github.alexthe666.iceandfire.compat.jei.firedragonforge.DragonForgeCategory;
+import com.github.alexthe666.iceandfire.entity.DragonType;
 import com.github.alexthe666.iceandfire.enums.EnumSkullType;
+import com.github.alexthe666.iceandfire.item.DragonItems;
 import com.github.alexthe666.iceandfire.item.IafItemRegistry;
 import com.github.alexthe666.iceandfire.recipe.DragonForgeRecipe;
 import com.github.alexthe666.iceandfire.recipe.IafRecipeRegistry;
@@ -12,30 +12,35 @@ import mezz.jei.api.IModPlugin;
 import mezz.jei.api.JeiPlugin;
 import mezz.jei.api.constants.ModIds;
 import mezz.jei.api.constants.VanillaTypes;
+import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.registration.IRecipeCatalystRegistration;
 import mezz.jei.api.registration.IRecipeCategoryRegistration;
 import mezz.jei.api.registration.IRecipeRegistration;
+import net.minecraft.Util;
 import net.minecraft.client.Minecraft;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @JeiPlugin
 public class IceAndFireJEIPlugin implements IModPlugin {
 
     public static final ResourceLocation MOD = new ResourceLocation("iceandfire:iceandfire");
-    public static final mezz.jei.api.recipe.RecipeType<DragonForgeRecipe> FIRE_DRAGON_FORGE_RECIPE_TYPE = mezz.jei.api.recipe.RecipeType.create(ModIds.MINECRAFT_ID, "firedragonforge", DragonForgeRecipe.class);
-    public static final mezz.jei.api.recipe.RecipeType<DragonForgeRecipe> ICE_DRAGON_FORGE_RECIPE_TYPE = mezz.jei.api.recipe.RecipeType.create(ModIds.MINECRAFT_ID, "icedragonforge", DragonForgeRecipe.class);
-    public static final mezz.jei.api.recipe.RecipeType<DragonForgeRecipe> LIGHTNING_DRAGON_FORGE_RECIPE_TYPE = mezz.jei.api.recipe.RecipeType.create(ModIds.MINECRAFT_ID, "lightningdragonforge", DragonForgeRecipe.class);
+    public static final Map<DragonType, RecipeType<DragonForgeRecipe>> DRAGON_FORGE_RECIPE_TYPES = Util.make(new HashMap<>(), map -> {
+        for(var type : DragonType.values()) {
+            map.put(type, RecipeType.create(ModIds.MINECRAFT_ID, type.getSerializedName() + "_dragon_forge", DragonForgeRecipe.class));
+        }
+    });
 
+    public IceAndFireJEIPlugin() {
 
-    public static final ResourceLocation FIRE_DRAGON_FORGE_ID = new ResourceLocation("iceandfire:fire_dragon_forge");
-    public static final ResourceLocation ICE_DRAGON_FORGE_ID = new ResourceLocation("iceandfire:ice_dragon_forge");
-    public static final ResourceLocation LIGHTNING_DRAGON_FORGE_ID = new ResourceLocation("iceandfire:lightning_dragon_forge");
+    }
+
 
     private void addDescription(IRecipeRegistration registry, ItemStack itemStack) {
         registry.addIngredientInfo(itemStack, VanillaTypes.ITEM_STACK, Component.translatable(itemStack.getDescriptionId() + ".jei_desc"));
@@ -45,18 +50,16 @@ public class IceAndFireJEIPlugin implements IModPlugin {
     public void registerRecipes(IRecipeRegistration registry) {
         List<DragonForgeRecipe> forgeRecipeList = Minecraft.getInstance().level.getRecipeManager().getAllRecipesFor(IafRecipeRegistry.DRAGON_FORGE_TYPE.get());
 
-        List<DragonForgeRecipe> fire = forgeRecipeList.stream().filter(item -> item.getDragonType().equals("fire")).collect(Collectors.toList());
-        List<DragonForgeRecipe> ice = forgeRecipeList.stream().filter(item -> item.getDragonType().equals("ice")).collect(Collectors.toList());
-        List<DragonForgeRecipe> lightning = forgeRecipeList.stream().filter(item -> item.getDragonType().equals("lightning")).collect(Collectors.toList());
+        for(var type : DragonType.values()) {
+            List<DragonForgeRecipe> list = forgeRecipeList.stream().filter(item -> item.getDragonType().equals(type)).toList();
+            registry.addRecipes(DRAGON_FORGE_RECIPE_TYPES.get(type), list);
 
+            var dragonItems = DragonItems.getDragonItems(type);
+            addDescription(registry, new ItemStack(dragonItems.blood().get()));
+            addDescription(registry, new ItemStack(dragonItems.skull().get()));
 
-        registry.addRecipes(FIRE_DRAGON_FORGE_RECIPE_TYPE, fire);
-        registry.addRecipes(ICE_DRAGON_FORGE_RECIPE_TYPE, ice);
-        registry.addRecipes(LIGHTNING_DRAGON_FORGE_RECIPE_TYPE, lightning);
+        }
 
-        addDescription(registry, new ItemStack(IafItemRegistry.FIRE_DRAGON_BLOOD.get()));
-        addDescription(registry, new ItemStack(IafItemRegistry.ICE_DRAGON_BLOOD.get()));
-        addDescription(registry, new ItemStack(IafItemRegistry.LIGHTNING_DRAGON_BLOOD.get()));
         addDescription(registry, new ItemStack(IafItemRegistry.DRAGONEGG_RED.get()));
         addDescription(registry, new ItemStack(IafItemRegistry.DRAGONEGG_BRONZE.get()));
         addDescription(registry, new ItemStack(IafItemRegistry.DRAGONEGG_GRAY.get()));
@@ -69,9 +72,6 @@ public class IceAndFireJEIPlugin implements IModPlugin {
         addDescription(registry, new ItemStack(IafItemRegistry.DRAGONEGG_AMYTHEST.get()));
         addDescription(registry, new ItemStack(IafItemRegistry.DRAGONEGG_COPPER.get()));
         addDescription(registry, new ItemStack(IafItemRegistry.DRAGONEGG_BLACK.get()));
-        addDescription(registry, new ItemStack(IafItemRegistry.DRAGON_SKULL_FIRE.get()));
-        addDescription(registry, new ItemStack(IafItemRegistry.DRAGON_SKULL_ICE.get()));
-        addDescription(registry, new ItemStack(IafItemRegistry.DRAGON_SKULL_LIGHTNING.get()));
         addDescription(registry, new ItemStack(IafItemRegistry.FIRE_STEW.get()));
         addDescription(registry, new ItemStack(IafItemRegistry.FROST_STEW.get()));
 
@@ -102,16 +102,12 @@ public class IceAndFireJEIPlugin implements IModPlugin {
 
     @Override
     public void registerCategories(IRecipeCategoryRegistration registry) {
-        registry.addRecipeCategories(new FireDragonForgeCategory());
-        registry.addRecipeCategories(new IceDragonForgeCategory());
-        registry.addRecipeCategories(new LightningDragonForgeCategory());
+        for(var type : DragonType.values()) registry.addRecipeCategories(DragonForgeCategory.of(type));
     }
 
     @Override
     public void registerRecipeCatalysts(IRecipeCatalystRegistration registry) {
-        registry.addRecipeCatalyst(new ItemStack(IafBlockRegistry.DRAGONFORGE_FIRE_CORE.get()), FIRE_DRAGON_FORGE_RECIPE_TYPE);
-        registry.addRecipeCatalyst(new ItemStack(IafBlockRegistry.DRAGONFORGE_ICE_CORE.get()), ICE_DRAGON_FORGE_RECIPE_TYPE);
-        registry.addRecipeCatalyst(new ItemStack(IafBlockRegistry.DRAGONFORGE_LIGHTNING_CORE.get()), LIGHTNING_DRAGON_FORGE_RECIPE_TYPE);
+        for(var type : DragonType.values()) registry.addRecipeCatalyst(new ItemStack(DragonForge.getCore(type, true)), DRAGON_FORGE_RECIPE_TYPES.get(type));
     }
 
     @Override
